--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             </p>
                         </div>
                         <div class="col">
-                            <img class="profile-foto" src="assets/img/samuel.svg" alt="samuel nicolau" title="Samuel Nicolau">
+                            <img class="profile-foto" src="assets/img/samuel.ico" alt="samuel nicolau" title="Samuel Nicolau">
                         </div>
                     </div>
                 </div>
