--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <header>
         <div class="col-12 nav-container">
-            <a class="logo" href="index.html">Samuel</a>
+            <a class="logo" href="index.html">NICODE</a>
             <nav class="nav-list">
                 <ol class="nav-ol-list">
                     <li><a href="#about">Sobre</a></li>
@@ -97,17 +97,17 @@
                     <div class="content-columns">
                         <div class="col">
                             <p>
-                                Samuel é um estudante de Tecnologias e inovações, todo o seu interesse por esta área deve se pelo fato de gostar de expressar as suas ideias por intermédio da tecnologia que é o melhor meio para ele expressar os seus sentimentos e compartilhar com os outros, Atualmente está fazendo a universidade e também se esforçando para superar-se. Ah! que cara legal adoro ele.
+                                Samuel ou "NICODE" é um estudante de Tecnologias e inovações, todo o seu interesse por esta área deve se pelo fato de gostar de expressar as suas ideias por intermédio da tecnologia que é o melhor meio para ele expressar os seus sentimentos e compartilhar com os outros, Atualmente está fazendo a universidade e também se esforçando para superar-se. Ah! que cara legal adoro ele.
                             </p>
                             <p>
-                                Ainda não possui muita experiência, porém, possui habilidades preciosas que é a vontade de querer aprender mais e buscar soluções dos problemas, o Samuel é uma pessoa que transmite confiança.             
+                                Ainda não possui muita experiência, porém, possui habilidades preciosas que é a vontade de querer aprender mais e buscar soluções dos problemas.            
                             </p>
                             <p>
                                 Opaa! Estava esquecendo, começou com sua experiência como Desenvolvedor Front-End em 2021. 
                             </p>
                         </div>
                         <div class="col">
-                            <img class="profile-foto" src="assets/img/samuel.ico" alt="samuel nicolau" title="Samuel Nicolau">
+                            <img class="profile-foto" src="assets/img/samuel.jpg" alt="samuel nicolau" title="Samuel Nicolau">
                         </div>
                     </div>
                 </div>
@@ -259,7 +259,7 @@
         </div>
     </main>
     <footer>
-        <p>Depois deste minuto, este será passado. Samuel Nicolau.</p>
+        <p>Projetado e construído por Samuel Nicolau.</p>
     </footer>
 </body>
 </html>
