--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
     <header>
         <div class="col-12 nav-container">
             <a class="logo" href="index.html">NICODE</a>
+            <button class="mobile-nav-toggle" aria-controls="nav-list" aria-expanded="false">
+                <span class="sr-only">Menu</span>
+            </button>
+            <div class="mobile-menu" aria-controls="nav-list" aria-expanded="false">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
             <nav class="nav-list">
                 <ol class="nav-ol-list">
                     <li><a href="#about">Sobre</a></li>
