--- a/index.html
+++ b/index.html
@@ -123,40 +123,6 @@
                     </div>
                     <div class="content-columns">
                         <div class="project-body">
-                            <div class="header-list">
-                                <ul class="project-list-icons">
-                                    <li>
-                                        <i class="fab fa-github"></i>
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-external-link-alt"></i>
-                                    </li>
-                                </ul>
-                            </div>
-                            <p>Reprodutor de Áudio</p>
-                            <h3 class="title-project">
-                                ifeel 
-                            </h3>
-                            <p>
-                                Um Reprodutor de Áudio desenvolvido apenas para treinar as minhas habilidades.
-                            </p>
-                            <ul class="list-project">
-                                <li>HTML</li>
-                                <li>CSS</li>
-                                <li>JavaScript</li>
-                            </ul>
-                        </div>
-                        <div class="project-body">
-                            <div class="header-list">
-                                <ul class="project-list-icons">
-                                    <li>
-                                        <i class="fab fa-github"></i>
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-external-link-alt"></i>
-                                    </li>
-                                </ul>
-                            </div>
                             <h3 class="title-project">
                                 Brevemente Disponivel 
                             </h3>
@@ -165,16 +131,6 @@
                             </p>
                         </div>
                         <div class="project-body">
-                            <div class="header-list">
-                                <ul class="project-list-icons">
-                                    <li>
-                                        <i class="fab fa-github"></i>
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-external-link-alt"></i>
-                                    </li>
-                                </ul>
-                            </div>
                             <h3 class="title-project">
                                 Brevemente Disponivel 
                             </h3>
@@ -183,16 +139,6 @@
                             </p>
                         </div>
                         <div class="project-body">
-                            <div class="header-list">
-                                <ul class="project-list-icons">
-                                    <li>
-                                        <i class="fab fa-github"></i>
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-external-link-alt"></i>
-                                    </li>
-                                </ul>
-                            </div>
                             <h3 class="title-project">
                                 Brevemente Disponivel 
                             </h3>
@@ -201,16 +147,6 @@
                             </p>
                         </div>
                         <div class="project-body">
-                            <div class="header-list">
-                                <ul class="project-list-icons">
-                                    <li>
-                                        <i class="fab fa-github"></i>
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-external-link-alt"></i>
-                                    </li>
-                                </ul>
-                            </div>
                             <h3 class="title-project">
                                 Brevemente Disponivel 
                             </h3>
@@ -219,16 +155,14 @@
                             </p>
                         </div>
                         <div class="project-body">
-                            <div class="header-list">
-                                <ul class="project-list-icons">
-                                    <li>
-                                        <i class="fab fa-github"></i>
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-external-link-alt"></i>
-                                    </li>
-                                </ul>
-                            </div>
+                            <h3 class="title-project">
+                                Brevemente Disponivel 
+                            </h3>
+                            <p>
+                                Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
+                            </p>
+                        </div>
+                        <div class="project-body">
                             <h3 class="title-project">
                                 Brevemente Disponivel 
                             </h3>
