--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         </p>
                     </div>
                     <div class="btn-animado">
-                        <a href="#">Curriculum</a>
+                        <a href="#">Baixar CV</a>
                     </div>
                 </div>
             </section>
