--- a/index.html
+++ b/index.html
@@ -89,6 +89,16 @@
                         <a href="#">Baixar CV</a>
                     </div>
                 </div>
+                <div class="play-song">
+                    <div class="btns">
+                        <span>
+                            <p>sound</p><img src="vendor/paused.svg" alt="paused" id="play">
+                        </span>
+                    </div>
+                    <audio id="sound" loop>
+                        <source src="vendor/audio/Lens.mp3" type="audio/mpeg">
+                    </audio>
+                </div>
             </section>
             <section id="about">
                 <div class="container ">
