--- a/index.html
+++ b/index.html
@@ -123,22 +123,25 @@
             </div>
         </section>
         <!--Conhecimentos-->
-        <sectiion id="service-area">
-            <div class="col 12">
-                <h1>Conhecimentos</h1>
+        <section id="skills-area">
+            <h1>Conhecimentos</h1>
+            <div class="skills-content">
+                <div class="box-skills">
+                    <button class="btn-skills active"><a href="#">HTML</a></button>
+                    <button class="btn-skills"><a href="#">CSS</a></button>
+                    <button class="btn-skills"><a href="#">JavaScript</a></button>
+                    <button class="btn-skills"><a href="#">JavaScript</a></button>
+                    <button class="btn-skills"><a href="#">JavaScript</a></button>
+                    <button class="btn-skills"><a href="#">JavaScript</a></button>
+                </div>
+               <div class="inform-skill">
+                <p>
+                    HTML é a liguagem base da internet para desenvolvimento de sites. 
+                    Foi criada para ser de fácil entendimento por seres humanos e também por máquinas, como por exemplo o Google ou outros sistemas que percorrem a internet capturando informações. 
+                </p>
+               </div>
             </div>
-            <div class="containerMax">
-                <div class="box-conhecimento">
-                    <i class="fab fa-html5"></i>
-                </div>
-                <div class="box-conhecimento">
-                    <i class="fab fa-css3-alt"></i>
-                </div>
-                <div class="box-conhecimento">
-                    <i class="fab fa-js"></i>
-                </div>
-            </div>
-        </sectiion>
+        </section>
         <!--projetos-->
         <section id="works">
             <div class="col-12">
@@ -200,7 +203,7 @@
                 <div class="btn-animado"><a href="#">Repositório no Github</a></div>
             </div>
         </section>
-        <sectiion id="service-area">
+        <section id="service-area">
             <div class="col 12">
                 <h1>Serviços</h1>
             </div>
@@ -214,11 +217,8 @@
                 <div class="box-service">
     
                 </div>
-                <div class="box-service">
-    
-                </div>
             </div>
-        </sectiion>
+        </section>
         <!--contato-->
         <section id="contact-area">
             <div class="container">
