--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                 </div>
                 <div class="col about-me">
                     <p>
-                        Sou um engenheiro de software especializado em criar (e ocasionalmente projetar) experiências digitais excepcionais.
-                        Atualmente, estou focado na construção de produtos acessíveis e centrados no ser humano em Afirmação.
+                        Sou um engenheiro de software especializado em dar vida às ideais na internet e projetando melhores experiências digitais.
+                        Atualmente, estou focado na construção de sites.
                     </p>
                 </div>
                 <div class="btn-animado">
@@ -130,9 +130,7 @@
                     <button class="btn-skills active"><a href="#">HTML</a></button>
                     <button class="btn-skills"><a href="#">CSS</a></button>
                     <button class="btn-skills"><a href="#">JavaScript</a></button>
-                    <button class="btn-skills"><a href="#">JavaScript</a></button>
-                    <button class="btn-skills"><a href="#">JavaScript</a></button>
-                    <button class="btn-skills"><a href="#">JavaScript</a></button>
+                    <button class="btn-skills"><a href="#">bootstrap</a></button>
                 </div>
                <div class="inform-skill">
                 <p>
