--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 <body>
     <header>
         <a href="index.html"><img class="logo" src="assets/img/logo.jpg" alt="logo-name"></a>
-        <nav>
-            <div class="toggle" aria-controls="nav-list" aria-expanded="false">
-                <span></span>
-                <span></span>
-                <span></span>
+        <nav id="menu-toggle">
+            <div class="btn-mobile-menu">Menu
+                <span class="line1"></span>
+                <span class="line2"></span>
+                <span class="line3"></span>
             </div>
-            <div id="nav-list" class="nav-list" data-visible="false">
+            <div class="nav-list">
                 <ol class="nav-ol-list">
                     <li><a href="#about">Sobre</a></li>
                     <li><a href="#service">Projetos</a></li>
