--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <header>
         <a href="index.html"><img class="logo" src="assets/img/logo.jpg" alt="logo-name"></a>
-        <button aria-controls="menu-toggle" aria-expanded="false" class="btn-mobile">
-            <span class="line"></span>
-        </button>
+        <div aria-controls="menu-toggle" aria-expanded="false" class="btn-mobile">
+            <span class="line" aria-expanded="false"></span>
+        </div>
         <nav>
             <div id="menu-toggle" class="nav-list" data-visible="false">
                 <ol class="nav-ol-list">
