--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                     <a href="#">Baixar CV</a>
                 </div>
             </div>
+            <!--
             <div class="play-song">
                 <div class="btns">
                     <span>
@@ -85,6 +86,7 @@
                     <source src="vendor/audio/Lens.mp3" type="audio/mpeg">
                 </audio>
             </div>
+            -->
         </section>
         <section id="about">
             <div class="container ">
@@ -215,6 +217,7 @@
                 </div>
             </div>
         </section>
+        <a class="btn-scroll" href="">PULL UP</a>
     </main>
     <footer>
         <p>Projetado e construído por Samuel Nicolau.</p>
