--- a/index.html
+++ b/index.html
@@ -58,35 +58,30 @@
     <main>
         <section id="main">
             <div class="container">
-                <p class="text-blur-out">Oi, meu nome é</p>
-                <div class="col align-self-start">
-                    <h2 class="big-heading">Samuel  Nicolau.</h2>
-                </div>
-                <div class="col align-self-start">
-                    <h2 class="big-heading">Eu sou desenvolvedor Web.</h2>
-                </div>
-                <div class="col about-me">
-                    <p>
-                        Sou um engenheiro de software especializado em dar vida às ideais na internet e projetando melhores experiências digitais.
-                        Atualmente, estou focado na construção de sites.
-                    </p>
-                </div>
-                <div class="btn-animado">
-                    <a href="#">Baixar CV</a>
+                <div class="row about-coluna">
+                    <div class="col-md-8">
+                        <p class="text-blur-out">Oi, meu nome é</p>
+                        <div class="col align-self-start">
+                            <h2 class="big-heading">Samuel  Nicolau.</h2>
+                        </div>
+                        <div class="col align-self-start">
+                            <h2 class="big-heading">Eu sou desenvolvedor Web.</h2>
+                        </div>
+                        <div class="col about-me">
+                            <p>
+                                Sou um engenheiro de software especializado em dar vida às ideais na internet e projetando melhores experiências digitais.
+                                Atualmente, estou focado na construção de sites.
+                            </p>
+                        </div>
+                        <div class="btn-animado">
+                            <a href="#">Baixar CV</a>
+                        </div>
+                    </div>
+                    <div id="profile-foto" class="col">
+                        <img class="img-user" src="assets/img/heidy.png" alt="">
+                    </div>
                 </div>
             </div>
-            <!--
-            <div class="play-song">
-                <div class="btns">
-                    <span>
-                        <p>sound</p><img src="vendor/paused.svg" alt="paused" id="play">
-                    </span>
-                </div>
-                <audio id="sound" loop>
-                    <source src="vendor/audio/Lens.mp3" type="audio/mpeg">
-                </audio>
-            </div>
-            -->
         </section>
         <section id="about">
             <div class="container ">
