--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     </li>
                     <li>
                         <a href="https://twitter.com/DaimonEsloton" target="_blank">
-                            <i class="fab fa-twitter"></i>
-                            <span><i class="fab fa-twitter"></i></span>
+                            <i class="fab fa-github"></i>
+                            <span><i class="fab fa-github"></i></span>
                         </a>
                     </li>
                 </ul> 
@@ -214,6 +214,7 @@
         </section>
         <a class="btn-scroll" href="">PULL UP</a>
     </main>
+    <div class="cursor"></div>
     <footer>
         <p>Projetado e construído por Samuel Nicolau.</p>
     </footer>
