--- a/index.html
+++ b/index.html
@@ -86,22 +86,16 @@
         <section id="about">
             <div class="container ">
                 <div class="col-12">
-                    <h1 class="main-title">Quem é Samuel?</h1>
+                    <h1 class="main-title">Quem é Samuel <span>.</span></h1>
                 </div>
                 <div class="content-columns">
-                    <div class="col">
+                    <article class="colunas">
                         <p>
-                            Samuel ou "NICODE" é um estudante de Tecnologias e inovações, todo o seu interesse por esta área deve se pelo fato de gostar de expressar as suas ideias por intermédio da tecnologia que é o melhor meio para ele expressar os seus sentimentos e compartilhar com os outros, Atualmente está fazendo a universidade e também se esforçando para superar-se. Ah! que cara legal adoro ele.
+                            Samuel ou "NICODE-SN" é um estudante de Tecnologias e inovações, todo o seu interesse por esta área deve se pelo fato de gostar de expressar as suas ideias por intermédio da tecnologia que é o melhor meio para ele expressar os seus sentimentos e compartilhar com o mundo.
                         </p>
-                        <p>
-                            Ainda não possui muita experiência, porém, possui habilidades preciosas que é a vontade de querer aprender mais e buscar soluções dos problemas.            
-                        </p>
-                        <p>
-                            Opaa! Estava esquecendo, começou com sua experiência como Desenvolvedor Front-End em 2021. 
-                        </p>
-                    </div>
-                    <div class="col">
-                        <img class="profile-foto" src="assets/img/samuel.jpg" alt="samuel nicolau" title="Samuel Nicolau">
+                    </article>
+                    <div class="colunas">
+                        <img class="img-user" src="assets/img/heidy.png" alt="samuel nicolau" title="Samuel Nicolau">
                     </div>
                 </div>
             </div>
@@ -109,7 +103,7 @@
         <!--Conhecimentos-->
         <section id="skills-area">
             <div class="col-12">
-                <h1 class="main-title">Conhecimentos</h1>
+                <h1 class="main-title">Conhecimentos<span>.</span></h1>
             </div>
             <div class="skills-content">
                 <div class="box-skills">
@@ -130,7 +124,7 @@
         <section id="works">
             <div class="col-12">
                 <h1 class="main-title">
-                    Projetos.
+                    Projetos<span>.</span>
                 </h1>
             </div>
             <div class="containerMax">
@@ -189,7 +183,7 @@
         </section>
         <section id="service-area">
             <div class="col 12">
-                <h1>Serviços</h1>
+                <h1 class="main-title">Serviços <span>.</span></h1>
             </div>
             <div class="containerMax">
                 <div class="box-service">
@@ -213,11 +207,16 @@
             </div>
         </section>
         <a class="btn-scroll" href="">PULL UP</a>
+        <footer>
+            <div class="rodape-layout">
+                <p>© 2022 nicodesn.com</p>
+                <div>
+                    <p>Projetado e construído por Samuel Nicolau.</p>
+                </div>
+            </div>
+        </footer>
     </main>
     <div class="cursor"></div>
-    <footer>
-        <p>Projetado e construído por Samuel Nicolau.</p>
-    </footer>
     <script src="assets/js/index.js"></script>
     <script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
