--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </section>
-        <section id="about">
+        <!--<section id="about">
             <div class="col-12">
                 <h1 class="main-title">Quem é Samuel <span>.</span></h1>
             </div>
@@ -97,7 +97,7 @@
                     <img class="img-user" src="assets/img/heidy.png" alt="samuel nicolau" title="Samuel Nicolau">
                 </div>
             </div>
-        </section>
+        </section>-->
         <!--Conhecimentos-->
         <section id="skills-area">
             <div class="col-12">
@@ -125,31 +125,12 @@
                     Projetos<span>.</span>
                 </h1>
             </div>
+            <div class="btn-links-project arquivo">
+                <div class="btn-animado">
+                    <a href="#">Ver Arquivos</a>
+                </div>
+            </div>
             <div class="containerMax">
-                <article class="project-body">
-                    <h3 class="title-project">
-                        Brevemente Disponivel 
-                    </h3>
-                    <p>
-                        Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
-                    </p>
-                </article>
-                <article class="project-body">
-                    <h3 class="title-project">
-                        Brevemente Disponivel 
-                    </h3>
-                    <p>
-                        Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
-                    </p>
-                </article>
-                <article class="project-body">
-                    <h3 class="title-project">
-                        Brevemente Disponivel 
-                    </h3>
-                    <p>
-                        Trabalhando nisso, desculpe! Pouco em breve estará disponivel.
-                    </p>
-                </article>
                 <article class="project-body">
                     <h3 class="title-project">
                         Brevemente Disponivel 
@@ -176,7 +157,9 @@
                 </article>
             </div>
             <div class="btn-links-project">
-                <div class="btn-animado"><a href="#">Repositório no Github</a></div>
+                <div class="btn-animado">
+                    <a href="#">Repositório no Github</a>
+                </div>
             </div>
         </section>
         <section id="service-area">
@@ -204,6 +187,7 @@
                 </div>
             </div>
         </section>
+
         <footer>
             <div class="rodape-layout">
                 <p>© 2022 nicodesn.com</p>
