--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
                     <button class="btn-skills"><a href="#">bootstrap</a></button>
                 </div>
                <div class="inform-skill">
+                   <h3>HyperText Markup Language</h3>
+                   <p>Criado por: Tim Berners-Lee</p>
+                   <p>Ano: 1991</p>
                     <p>
                         HTML é a liguagem base da internet para desenvolvimento de sites. 
                         Foi criada para ser de fácil entendimento por seres humanos e também por máquinas, como por exemplo o Google ou outros sistemas que percorrem a internet capturando informações. 
@@ -156,7 +159,7 @@
                     </p>
                 </article>
             </div>
-            <div class="btn-links-project">
+            <div class="btn-links-project arquivo">
                 <div class="btn-animado">
                     <a href="#">Repositório no Github</a>
                 </div>
@@ -180,10 +183,14 @@
         </section>
         <!--contato-->
         <section id="contact-area">
-            <div class="container">
-                <div class="">
-                    <p>Fique tranquilo e relaxe, não pense bastante depois deste minuto este será passado. Então vá lá, mande um e-mail estarei esperando e respondendo com muito entusiasmo e amor.</p>
-                    <a href="#">muambalas@gmail.com</a>
+            <div class="col-12">
+                <h1 class="main-title">
+                    Entrar em contato<span>.</span>
+                </h1>
+            </div>
+            <div class="btn-links-project arquivo">
+                <div class="btn-animado">
+                    <a href="#">Diga Olá</a>
                 </div>
             </div>
         </section>
